--- a/DataStructure/数据结构/图/图.md
+++ b/DataStructure/数据结构/图/图.md
@@ -318,17 +318,260 @@ A->B,A<-B，A B(没有边相连接)，A->B A <- B
 
 ## 最小生成树（无向图）
 
-　　在说最小生成树之前，先来说说加权图。下图中便是一副加权无向图。加权图和图的区别在于它的每一条边都有一个权值，那么它有什么用呢？举个例子：
+　　在说最小生成树之前，先来说说加权图。下图中便是一副加权无向图。加权图和图的区别在于它的每一条边都有一个权值，那么它有什么用呢？举个例子：图可以应用在网络流量方面，那么它的每一条边的 h 权值可以代表某一时刻的网络质量，那么当流量进行选择的时候，肯定会选择质量好的那一路。（实际上网络流量选择要比这还复杂，因为还要考虑到负载均衡的情况。）
 
+![](image/加权无向图.png)
 
+　　那么什么是最小生成树呢？
 
+　　图的生成树是它的一棵含有其所有顶点的无环连通子图。
 
+　　一副加权图的最小生成树（MST）是它的一棵权值（树的所有边的权值之和）最小的生成树。如上图的黑色边构成的无环。在这里规定：
 
+* 只考虑连通图：试想一下，如果不连通，又如何直到两个顶点之间的权值呢？
+* 边的权重：边的权值可以为正数、负数、0。
+* 所有边的权只能都各不相同：相同的话，最小生成树就不唯一了。
 
+　　下面是生成树的一些性质：
 
+1. 用一条边连接树中的任意两个顶点都会产生一个新的环。
+2. 从树中任意删除一条边都将会得到两棵独立的树。
 
+　　如下图：
 
+![](image/生成树性质.png)
 
+　　根据上面的两个性质，可以将图中所有的顶点切分为两个非空且不重叠的两个集合。而其中横切边是一条连接两个属于不同集合的顶点的边。
+
+　　切分定理：把加权图中的所有顶点分为集合、检查横跨两个集合的所有边并识别哪条边应属于图的最小生成树。
+
+![](image/切分边.png)
+
+　　当然，在切分中，会得到一条权重最小的边（这条边必然属于最小生成树的边），但是并不代表着其他的边就不属于最小生成树。
+
+### 最小生成树的贪心算法
+
+　　切分定理是解决最小生成树问题的所有算法的基础。而这些算法都是贪心算法的特殊情况：使用切分定理找到一条边，然后不断地切分，直到找到所有的最小生成树的所有边。
+
+　　最小生成树的贪心算法：将含有 V 个顶点的加权连通图的最小生成树的边标记为黑色（初始状态边是灰色的），找到一种切分，它产生的横切边军部为黑色，然后权重最小的横切边标记为黑色。反复，直到标记了 V-1 条黑色边为止。
+
+　　下面是一个贪心最小生成树算法的图：
+
+![](image/贪心最小生成树.png)
+
+　　因为有权无向图的边发生了改变，所以定义数据结构的代码也得发生变化。
+
+### 加权无向图的数据结构
+
+#### 带权重的边的数据类型
+
+```
+
+```
+
+#### 加权无向图的数据类型
+
+```
+
+```
+
+　　在定义好数据结构后，就可以开始来说一下生成最小树的算法了。
+
+### 最小生成树的算法
+
+　　对于最小生成树有两种常用的算法，普利姆算法（Prim 算法）和克鲁斯卡尔算法（Kruskal 算法）。这两种算法都是基于贪心算法的算法。
+
+#### Kruskal 算法
+
+　　Kruskal 算法很简单，首先得到所有的边，然后根据边的权重对边进行排序（从小到大）。然后将边根据顺序加入最小生成树中（必须保证加入的边不会与已经加入的边构成环）。
+
+　　思想：选择最短边加入，并且确保不成环路。每次找出候选边中权值最小的边，就将该边并入树中（不能有环），重复此过程直到所有边都被检测完为止。
+
+　　把所有的边排序，依次从小到大排列，按顺序选择边加入集合，如果选择该边构成了回路，则舍弃这条边，直到所有定边都在同一集合中。
+
+![](image/Kruskal算法.png)
+
+　　现在这个问题就分成了两个部分：
+
+1. 如何排序 - 使用排序算法即可（使用堆排序），使用优先队列。
+2. 如何检测回路。
+
+　　如何检测贿赂，可以使用 union-find 算法。首先说一下这个原理：
+
+　　首先有 N 个独立分散的点，如果将点用线段进行连接，如何避免成环。可以这样想，像树一样，有根节点，如果两个节点的根节点是一样的，那么毋庸置疑，将两个节点进行连接肯定会成环。
+
+　　其中，这个算法有 3 种写法：
+
+* quick-find 算法。
+* quick-union 算法。
+* 加权 quick-union 算法。
+
+　　加权 quick-union 算法，因为这个在最坏的情况下时间复杂度也只有 lgN。
+
+##### quick-union 算法
+
+```
+
+```
+
+　　上面的算法在 union 种，是将小树加入大树。目的是减少在最坏情况下的时间复杂度。
+
+　　下面边是 Kruskal 算法的实现部分：
+
+```
+
+```
+
+#### Prim 算法
+
+　　Prim 算法和 Kruskal 算法一样，同样使用的是贪心算法。它的原理很简单，就是每一步为都会为一棵生长中的树添加一条边（总是将连接树中的顶点与不在树种的顶点切权重最小的边加入树中）。
+
+　　思想：从图中任意取出一个顶点，把它当成一棵树，然后从与这棵树相接的边中选取一条最短（权值最小）的边，并将这条边及其所连顶点并入当前树中，得到一棵有 3 个顶点的树。以此类推，知道图中所有顶点都被并入树中为止，此时得到的生成树就是最小生成树。
+
+　　假设全部顶点的集合是 V，已经被挑选出来的是 U，那么从集合 V-U 中不断挑选权值最低的点。（这里的权值最低，是相对于 U 中所有的点来说，是把 U 看成一个整体。Prim 算法和后面的求最短路径的 Dijkstra 算法有些相似，具体区别看 Prim 算法和 Dijkstra 算法的比较）。以某起点为顶点，逐步找各顶点上最小权值的边来构建最小生成树。（这就像是如果去参加某个展会，例如世博会，从一个入口进去，然后找所在位置周边的场馆中最感兴趣的场馆观看，看完后再用同样的办法看下一个）。
+
+　　举例：下图所示的带权无向图采用 prim 算法求解最小生成树的过程如下所示：
+
+1. 从顶点 0 开始，此事后选边为 5、1、2，从中选择最小边长为 1 的边，加入到当前树中。
+2. 此时已有的边：(0,2)，此时已有顶点：0、2。此时选边为 5、3、2、6、2，最小边长是 2，选择其加入（有 2 条，随便选一条符合条件即可）。
+3. 此时已有的边：(0,2)、(0,3)，此时已有顶点：0、2、3，此时候选边为 5、3、2、3，最小边长为 2，选择其加入。
+4. 此时已有的边：(0,2)、(0,3)、(2,4)，此时已有顶点：0、2、3、4，此时候选边为 5、3、4，最小边长为 3，选择其加入。
+5. 此时已有的边：(0,2)、(0,3)、(2,4)、(2,1)，此时已有顶点：0、1、2、3、4，已包含全部顶点，生成树求解过程完毕。
+
+![](image/带权无向图.png)
+
+　　假设
+
+　　下面是一个示例：
+
+![](image/prim算法.png)
+
+　　其中 prim 算法有两种实现方式：
+
+##### 延时实现
+
+1. 把一个顶点加入最小生成树中。
+2. 再把它的所有的连接着未访问顶点的邻接边都放入优先队列（作为横切边）。
+3. 然后从横切边中弹出权重最小的一条，检查它两边的顶点是否在最小生成树中，如果在，则忽略该边，从头开始步骤 3。如果不在，则把它和它所连接的顶点加入最小生成树中。
+4. 再对它所连接的顶点作和以上相同的操作。直到优先队列为空。
+
+　　下面是延时实现的代码：
+
+```
+
+```
+
+　　当时可能发现了一个问题，那就是在优先队列中保存了很多没有用的边，无疑，这些边是需要占用空间的，那么如果去除这些失效的边，是不是就可以节约空间了呢？于时便又有了下面的算法。
+
+##### 即时实现
+
+1. 先把一个顶点放入最小生成树中。
+2. 遍历该顶点的邻接边节点（节点 A），如果边（边 W）所连接的某个顶点（节点 B）不在最小生成树中，且它（节点 B）到该顶点（节点 A）的距离大于该边（边 W）的权重，则该节点（节点B）到顶点（节点A）的距离变成该边的权重，并且更新索引优先队列中的边。
+3. 从索引优先队列弹出权重最小的边，然后对它所连接的顶点作以上操作，直到栈空。
+
+![](image/即时实现.png)
+
+```
+
+```
+
+　　即时的 prim 算法和延时的 prim 算法很相似，原理上面并没有什么发生改变，只不过在即时的 prim 算法中，只将有用的边加入优先队列，而没有用的边就不管它了。这样就节约了空间，以及遍历边的时间。
+
+　　性能特点：（V 个顶点 E 条边）。
+
+#### 算法对比
+
+　　Prim 算法：针对顶点，对于稠密图（变数非常多的情况）更好。
+
+　　Kruskal 算法：针对边，对于稀疏图（边数少）时更好。
+
+| 算法（最坏情况下） | 空间 | 时间  |
+| ------------------ | ---- | ----- |
+| Kruskal 算法       | E    | ElogE |
+| 延时的 Prim 算法   | E    | ElogE |
+| 即时的 Prim 算法   | V    | ElogV |
+
+## 最短路径 Dijkstra、Floyd
+
+　　基本概念：最短路径是指两顶点之间经过的边上权值之和最少的路径。
+
+　　求最短路径的算法：Dijstra 算法（从某个源点到其余各顶点的最短路径）、Floyd 算法（每一对顶点之间的最短路径）。
+
+### Dijkstra 算法
+
+　　思想：从图中选取到源点 v0 路径长度最短的顶点并入到集合 S 中，修改顶点 v0 到剩下的顶点的最短路径长度值，直到所有顶点都并入到 S 中为止。
+
+　　例题：
+
+![](image/最短路径Dijkstra.png)
+
+### Folyd 算法
+
+　　Folyd 算法是一个经典的动态规划算法，用通俗的语言来描述的话，首先目标是寻找从点 i 到点 j 的最短路径。从动态规划的角度看问题，从任意节点 i 到任意节点 j 的最短路径，不外乎 2 种可能，1 是直接从 i 到 j，2 是从 i 经过若干个节点 k 到 j。所以，假设 Dis(i,j) 为节点 u 到节点 v 的最短路径的举例，对于每一个节点 k，检查 Dis(i,k) + Dis(k,j) < Dis(i,j) 是否成立，如果成立，证明从 i 到 k 再到 j 的路径比 i 直接到 j 的路径段，便设置 Dis(i,j) = Dis(i,j) + Dis(k,j)，这样一来，当遍历完所有节点 k，Dis(i,j) 中记录的便是 i 到 j 的最短路径的距离。
+
+## AOV 网 拓扑排序
+
+　　AOV 网：重点是顶点。顶点表示活动，边表示活动之间的先后关系。
+
+### 拓扑排序
+
+　　基本概念：拓扑排序是对有向无环图 G 的排序，是将 G 中所有顶点排成一个线性序列，使得图中任意一对顶点 u 和 v，若存在 u 到 v 的路径，则在拓扑排序序列中一定是 u 出现在 v 的前边。（与边无关）
+
+　　实现思路：从有向无环图中选择一个入度为 0 的顶点输出，然后删去此顶点，并删除以此顶点为尾的弧，继续重复此步骤，直到输出全部顶点或者 AOV 网中不存在入度为 0 的顶点为止。
+
+![](image/拓扑排序.png)
+
+　　具体实现：拓扑排序的过程中，需要删除顶点，显然用邻接表会更加方便。考虑到算法过程中始终要查找入度为 0 的顶点，因此设置一个 indegree 数组，用来存放各顶点的入度数目。
+
+　　判断拓扑序列是否存在：看是否为无环图。
+
+## AOE 网 关键路径
+
+　　AOE 网：重点是边。边表示活动，顶点表示事件（事件是新活动开始或旧活动结束的标志）。
+
+　　关键路径：在 AOE （边表示活动）网中，从源点到汇点的所有路径中，具有最大路径长度的路径称为关键路径。把关键路径上的轰动称为关键活动。关键路径既是最短，又是最长。最短：完成工期的最短事件。最长：图中的最长路径。
+
+　　求关键路径的过程：
+
+1. Step 1：对事件（顶点）进行拓扑排序：（比较复杂繁琐的一步）。
+
+   Step 1.1：求事件的最早发生事件（从前往后计算）（上一个事件+权值）的最大值（多对1，求最大值）
+
+   Step 1.2：求时间的最晚发生时间（从后往前计算）（下一个事件-权值）的最小值（ 1对多，求最小值）
+
+2. step 2：写出活动（边）：（该步骤完全根据 Step 1 中的写，不复杂）
+
+   Step 2.1：求活动的最早发生时间（即上一个事件的最早开始时间）
+
+   Step 2.2：求活动的最晚发生时间（即下一个事件的最晚开始时间-边的权值）
+
+3. 求最早：从前往后计算，求最晚：从后往前计算。
+
+　　例图：
+
+![](image/关键路径.png)
+
+　　Step1. 对事件（顶点）进行拓扑排序：0、1、2、3、4、5、6、7、8、9、10。
+
+　　Step1.1. 求事件的最早发生时间（从前往后计算）（上一个事件+权值）的最大值（多对 1，求最大子）。
+
+　　Step 1.2. 求事件的最晚发生圣剑（从后往前计算）（下一个事件-权值）的最小值（1对多，求最小值）。
+
+　　计算过程及结果如下图：
+
+![](image/关键路径例1.png)
+
+　　Step 2：写出活动（边）：
+
+　　Step 2.1：求活动的最早发生事件（即上一个事件的最早开始时间）。
+
+　　Step 2.2：求活动的最晚发生时间（即下一个事件的最晚开始事件-边的权值）
+
+　　计算过程及结果如下图：
+
+![](image/关键路径例2.png)
+
+　　故得出关键路径为：a1、a4、a8、a12、a13、a14。
 
 ## 参考文章
 
