--- a/DataStructure/数据结构/线性表链式存储.md
+++ b/DataStructure/数据结构/线性表链式存储.md
@@ -6,6 +6,8 @@
 
 　　链式存储是采用一组地址任意的存储单元来存放元素，也就是说存放地址的空间不用是连续的。这样可以充分利用计算机的内存空间，实现灵活的内存动态管理。
 
+　　线性表的链式存储结构的特点是用一组任意的存储单元的存储线性表的数据元素，这组存储单元是可以连续的，也可以是不连续的。
+
 　　线性表元素之间存在 “ 一对一 ” 的关系，即除了第一个和最后一个数据元素之外，其它数据元素都是首位相接的（注意循环链表也是线性结构，但是它首尾是相接的），那么链式存储的线性表里的元素也必须满足这个特性。
 
 　　由于链式存储的线性表不是按照线性的逻辑顺序来存储元素，它需要在每个元素里额外保存一个引用（用于指向下一个元素），这样就形成了 “ 一对一 ” 的关系。
@@ -14,6 +16,30 @@
 
 　　把链表中存放的元素称之为节点，单向链表由数据和下一个元素的引用两部分组成。双向链表由数据、上一个元素的引用和下一个元素的引用三部分组成。
 
+　　线性表的链式存储结构：数据元素的存储映像，称为节点，包含两个域：数据域和指针域。
+
+　　特点：用一组任意的存储单元储存线性表的数据元素（存储单元可以连续，也可不连续）。
+
+　　优缺点：不要求逻辑上相邻的元素在物理位置上也相邻，因此它没有顺序存储结构所具有的弱点，但同时也失去了顺序表可随机存取的优点。
+
+　　优点：插入删除快，缺点：不支持随机访问。
+
+1. 线性链表（或称单链表）
+
+   链表的每个节点中只包含一个指针域。
+
+2. 静态链表
+
+   ![](image/静态链表的结构.png)
+
+3. 循环链表
+
+   最后一个节点的 index 指针不是空，而是指向头节点。
+
+4. 双向链表
+
+   ![](image/双向链表结构.png)
+
 　　单向链表单节点：
 
 ![](image/单向链表单节点.png)
@@ -21,6 +47,10 @@
 　　双向链表单节点：
 
 ![](image/双向链表单个节点.png)
+
+　　链式存储结构：
+
+![](image/链式存储.png)
 
 ## 2. 单向链表
 
@@ -769,6 +799,77 @@ public class DuplexLinkedList<T> implements List<T> {
 　　链表在插入、删除元素比顺序存储的线性表要快，但是失去了随机访问的能力，所以在查找一个节点或者根据 “ 索引 ” 来访问某个元素要比顺序存储的线性表要慢。
 
 　　JDK LinkedList 底层也是用链表实现的，LinkedList 还是个双端队列（既可以当作栈使用，也可以当作队列使用）。
+
+## 学习例子
+
+### 基于系统 API LinkedList 将麻将进行分组排序
+
+#### 思想
+
+![](image/麻将分组.png)
+
+#### 逻辑步骤
+
+1. 把所有的点数分别装入到对应的链表组中。
+2. 再把链表中所有的点数合并在一起
+3. 再把所有的点数分别装在对应的链表中
+4. 最后把对应的点数链表装在一个新的集合中
+
+#### 代码编写
+
+```
+
+```
+
+#### 应用
+
+　　数据量几十个，插入操作多的情况。
+
+### 编写双向链表 LinkedList CURD
+
+#### 参考图解
+
+![](image/双向链表.png)
+
+#### 编写代码
+
+```
+
+```
+
+#### 测试代码
+
+```
+
+```
+
+#### 测试结果
+
+```
+
+```
+
+
+
+
+
+### 编写简单的 ArrayList CURD
+
+```
+
+```
+
+
+
+#### 编写单向链表结构的 CURD
+
+![](image/单向链表.png)
+
+```
+
+```
+
+
 
 ## 4. 参考文章
 
