--- a/DataStructure/数据结构/线性表顺序存储.md
+++ b/DataStructure/数据结构/线性表顺序存储.md
@@ -32,6 +32,8 @@
 
 　　线性表的每个元素必须有相同的结构（元素可以是简单的数据，也可以是复杂的数据，但复杂的数据内部结构要相同）。
 
+　　线性表：一个线性表是 n 个数据元素的有限序列。
+
 ### 线性表的基本操作
 
 1. 线性表初始化
@@ -49,7 +51,19 @@
 
 　　顺序结构存储是指用一组地址连续的存储单元一次存放线性表中的元素。也就是说，顺序结构线性表中的数据元素的物理关系和逻辑关系是一致的。所以如果线性表采用顺序存储，让线性表中间的某个位置插入或者删除元素需要对其之后的元素进行移动。
 
+## 线性表的顺序表示
+
+　　线性表的顺序表示指的是用一组地址连续的存储单元一次存储线性表的数据元素。
+
+　　特点：逻辑关系上相邻的两个元素在物理位置上也相邻。
+
+　　优点：随机存取表中任一元素，它的存储位置可用一个简单、直观的公式来表示。
+
+　　缺点：做插入或删除操作时，需移动大量元素。
+
 ### 顺序存储结构的线性表中间位置插入新元素
+
+![](image/顺序线性表插入.png)
 
 　　首先要把该位置及其之后的元素往后移一位，为新元素腾出空间。
 
@@ -65,39 +79,178 @@
 
 ![](image/顺序线性表插入3.png)
 
-
-
-
-
 ### 删除顺序存储结构的线性表中间位置元素
 
+![](image/顺序线性表删除.png)
 
+　　删除顺序存储结构的线性表中间位置的元素，操作类似。
+
+　　删除索引 index = 2 的元素：
+
+![](image/线性表顺序存储删除1.png)
+
+　　删除元素：
+
+![](image/线性表顺序存储删除2.png)
+
+　　把 index = 2 之后的所有元素向左移动一格：
+
+![](image/线性表顺序存储删除3.png)
+
+　　顺序存储的线性表，采用数据存储，插入元素如果容量不够，需要进行扩容。扩容主要时创建一个新的数组，然后把数据从老数组拷贝到新的数组中。
 
 ## 实现 ArrayList
+
+　　Java 中的 ArrayList 就是一个顺序存储的线性表。下面来实现一个简易的 ArrayList。
+
+　　可以把上面线性表的基本操作提炼出一个 Java 接口的 List.java：
+
+```
+数据结构与算法（一）线性表之顺序存储和 ArrayList、Vector 源码剖析
+```
+
+　　实现类如下：
+
+```
+数据结构与算法（一）线性表之顺序存储和 ArrayList、Vector 源码剖析
+```
 
 
 
 ## 对比 JDK 中的 ArrayList
 
+　　以上代码实现了线性表的基本操作。下面主要说下和 JDK ArrayList 不同点。
+
 ### 1. forEach 迭代
+
+　　以上代码不支持 forEach 迭代，为了实现能够支持 forEach 迭代，需要实现 java.lang.Iterable 接口，如下所示：
+
+```
+数据结构与算法（一）线性表之顺序存储和 ArrayList、Vector 源码剖析
+```
 
 
 
 ### 2. 扩容机制
 
+　　扩容机制是不断的将 capacity*2，直到 capacity 大于 expectCapacity，JDK 里的 ArrayList 的扩容机制是：默认容量是 10，当需要的通量超过默认容量时，扩容算法为 (int)(oldCapaactty*1.5)，JDK ArrayList 扩容机制：
 
+```java
+private void grow(int minCapacity) {
+	// overflow-conscious code
+	int oldCapacity = elementData.length;
+	int newCapacity = oldCapacity + (oldCapacity >> 1);
+	if (newCapacity - minCapacity < 0)
+		newCapacity = minCapacity;
+	if (newCapacity - MAX_ARRAY_SIZE > 0)
+		newCapacity = hugeCapacity(minCapacity);
+	// minCapacity is usually close to size, so this is a win:
+	elementData = Arrays.copyOf(elementData, newCapacity);
+}
+```
 
 ### 3. fail-fast 机制
 
+　　当 foreach 的时候，删除集合元素会抛出 java.util.ConcurrentModificationException 异常。
 
+　　如：
+
+```java
+for (int i : list) {
+	list.remove(i);
+}
+```
+
+　　ArrayList 的父类 AbstractList 有个 modCount 字段，每次当 ArrayList 对象进行结构调整时 （structurally modified），结构性调整包括调用 ArrayList 的 add 方法或 remove 方法增删元素，modCount 都会自增。每个 iterator 迭代器都有一个 expectedModCount，初始值为 modCount，调用 iterator 迭代器的 next 和 remove 方法都会去检查 expectedModCount 和 modCount 是否相等，如果不等立即抛出 java.util.ConcurrentModificationException 异常。
+
+　　foreach 迭代本质上就是使用 iterator 迭代，在迭代的时候进行删除，那么 modCount 自增，next 方法检查到 expectedModCount 和 modCount 不相等，抛出异常。
+
+　　解决方法为使用 iterator 进行迭代和删除操作。
+
+```java
+Iterator<Integer> iterator = list.iterator();
+while (iterator.hasNext()) {
+	int i = iterator.next();
+	iterator.remove();//迭代器执行删除操作
+	System.out.println(i);
+}
+```
+
+　　这个方案再单线程的是有效的，如果在多线程的情况下，还是会触发 fail-fast，如下面代码：
+
+```java
+private static void iteratorMultipleThread() {
+	java.util.ArrayList<Integer> list = new java.util.ArrayList<>();
+	for (int i = 0; i < 10; i++) {
+		list.add(i);
+	}
+
+	new Thread(new Runnable() {
+		@Override
+		public void run() {
+			Iterator<Integer> iterator = list.iterator();
+			while (iterator.hasNext()) {
+				System.out.println("迭代元素：" + iterator.next());
+				try {
+					Thread.sleep(10);//出让cpu资源
+				} catch (InterruptedException e) {
+					e.printStackTrace();
+				}
+			}
+		}
+	}).start();
+
+	new Thread(new Runnable() {
+		@Override
+		public void run() {
+			Iterator<Integer> iterator = list.iterator();
+			while (iterator.hasNext()) {
+				int i = iterator.next();
+				if (i % 2 == 0) {
+					iterator.remove();
+					System.out.println("移除元素：" + i);
+				}
+
+			}
+		}
+	}).start();
+
+}
+```
+
+　　原因分析：
+
+　　通过 JDK ArrayList 源码得知，list.iterator() 方法会创建一个新的 Iterator 迭代器，从上面对 Iterator 迭代器介绍知道，每个 iterator 迭代器都有一个 expectedModCount，初始值为 modCount。调用 iterator 迭代器的 next 和 remove 方法都会去检查 expectedModCount 和 modCount 是否相等，如果不等立即抛出 java.util.ConcurrentModificationException 异常。
+
+　　启动两个线程，那么会有两个 Iterator，只要一个线程执行了 remove 操作，另一个线程再去迭代的时候（执行 next 方法）就会触发 fail-fast。
+
+　　可以把 iterator 操作放进 synchornized 同步代码块。如：
+
+```
+数据结构与算法（一）线性表之顺序存储和 ArrayList、Vector 源码剖析
+```
+
+　　synchronized 虽然可以解决这个问题，但是失去了并发性，上面虽然有两个线程，但是需要等待一个线程执行完毕，另一个线程才能执行。可以使用支持并发的 CopyOnWriteArrayList 代替 synchronzied 的方式。例如下面的操作，迭代的过程中不断的插入（thread1 插入，thread2 迭代）。
+
+```
+数据结构与算法（一）线性表之顺序存储和 ArrayList、Vector 源码剖析
+```
+
+　　下面说一下 Vector 类。
+
+　　Vector 和 ArrayList 非常相似，Vector 是线程安全的，ArrayList 不是线程安全的。
+
+　　Vector 实现线程安全的方式也很简单，把主要的操作方法加上了 synchornized 关键字，包括 iterator。上面 ArrayList 的 fail-fast 演示同样适用于 Vector，就算把 ArrayList 换成 Vector 同样会出现 ConcurrentModificationException 异常（原因一样）。
 
 ## 总结
 
-
-
-　　线性表
-
-#### 
+1. 顺序存储的线性表如 ArrayList、Vector 是用一组地址连续的存储单元（数组）来存储元素的。
+2. 顺序存储的线性表，因为需要一个固定长度的数组，在空间上存在一定的浪费。
+3. 顺寻存储的线性表的逻辑结构和物理结构一致，所以查找和读取的效率很高。
+4. 如果在 ArrayList、Vector 的中间对元素进行添加、删除操作，性能是比较差的，因为需要对元素进行整体移动。
+5. 如果在开发中知道存储的元素的个数，为了节省内存空间可以在构造 ArrayList 的时候传递容量参数，如 new ArrayList(2)；如果使用的是无参的构造方法，在执行 add 方法的时候，会创建长度为 10 的数组（DEFAULT_CAPACITY=10）。
+6. 在不考虑多线程的情况下，尽量使用 ArrayList，效率更高。
+7. 线性表应用：一元多项式的表示及相加。
 
 ## 参考文章
 
