--- a/DataStructure/数据结构/堆.md
+++ b/DataStructure/数据结构/堆.md
@@ -126,14 +126,157 @@
 
 ## 构建大顶堆和小顶堆
 
-```
+```java
+/**
+ * 大顶堆
+ *
+ * @param <T>
+ */
+public class MaxHeap<T extends Comparable<T>> {
+    private T[] data;
+    private int size;
 
+    public MaxHeap() {
+        this(16);
+    }
+
+    public MaxHeap(int capacity) {
+        data = (T[]) new Comparable[capacity];
+    }
+
+    // Heapify
+    public MaxHeap(T[] arr) {
+        data = arr;
+        size = arr.length;
+        // 对所有非叶子节点进行 siftDown 操作，从倒数第一个非叶子节点开始
+        for (int i = getParent(data.length - 1); i >= 0; i--) {
+            siftDown(i);
+        }
+    }
+
+    public int size() {
+        return size;
+    }
+
+    public boolean isEmpty() {
+        return size == 0;
+    }
+
+    public void clear() {
+        size = 0;
+        Arrays.fill(data, null);
+    }
+
+    public int getParent(int index) {
+        if (index == 0) {
+            return -1;
+        }
+        return (index - 1) / 2;
+    }
+
+    public int getLeft(int index) {
+        return index * 2 + 1;
+    }
+
+    public int getRight(int index) {
+        return index * 2 + 2;
+    }
+
+    public void add(T element) {
+        data[size++] = element;
+        if (size == data.length) {
+            doubleCapacity();
+        }
+        siftUp(size - 1);
+    }
+
+    private void doubleCapacity() {
+        data = Arrays.copyOf(data, data.length << 1);
+    }
+
+    private void swap(int i, int j) {
+        T tmp = data[i];
+        data[i] = data[j];
+        data[j] = tmp;
+    }
+
+    private void siftUp(int index) {
+        int parentIndex;
+        // 如果当前的节点比父节点要大
+        while (index > 0 && data[index].compareTo(data[parentIndex = getParent(index)]) > 0) {
+            swap(index, parentIndex);
+            index = parentIndex;
+        }
+    }
+
+    /**
+     * 移除堆中最大元素
+     *
+     * @return
+     */
+    public T removeMax() {
+        if (size == 0) {
+            throw new NoSuchElementException();
+        }
+        T delete = getMax();
+        swap(0, size - 1);
+        data[--size] = null;
+        siftDown(0);
+        return delete;
+    }
+
+    private void siftDown(int index) {
+        int left;
+        while ((left = getLeft(index)) < size) {
+            int max = left;
+            // 有右节点并且右节点大于左节点
+            if (left + 1 < size && data[left + 1].compareTo(data[left]) > 0) {
+                max = left + 1;
+            }
+            if (data[max].compareTo(data[index]) <= 0) {
+                break;
+            }
+            swap(index, max);
+            index = max;
+        }
+    }
+
+    /**
+     * 删除最大值，插入新元素
+     *
+     * @param element
+     * @return
+     */
+    public T replace(T element) {
+        T max = getMax();
+        data[0] = element;
+        siftDown(0);
+        return max;
+    }
+
+    public T getMax() {
+        if (size == 0) {
+            throw new NoSuchElementException();
+        }
+        return data[0];
+    }
+}
 ```
 
 　　下面是一组对一个数组进行 heapify 操作和对数组的元素一个个 add 进二叉堆的性能对比：
 
-```
+```java
+//10万个数据
+without heapify: 0.20134547 sec
+with    heapify: 0.28973186 sec
 
+//100万个数据
+without heapify: 2.54230192 sec
+with    heapify: 0.78025752 sec
+
+//1000万个数据
+without heapify: 46.96635561 sec
+with    heapify: 2.81621934 sec
 ```
 
 　　实现大顶堆和小顶堆的主要逻辑是一样的，主要在大顶堆的基础上对 siftUp 和 siftDown 的时候判断条件改下即可。例如如果是要构成小顶堆。siftDown 的条件是当前结点比父节点小；siftDown 的条件是当前结点比它的子节点要大。
@@ -148,7 +291,61 @@
 
 　　上面实现了二叉堆，基于二叉堆可以非常方便的实现优先队列。
 
+```java
+public interface IQueue<T> {
+    public void enqueue(T value);
+    public T dequeue();
+    public int size();
+    public void clear();
+    public boolean isEmpty();
+    public T getFront();
+}
 ```
+
+```java
+/**
+ * 优先队列
+ * @param <T>
+ */
+public class PriorityQueue<T extends Comparable<T>> implements IQueue<T> {
+
+    private MaxHeap<T> maxHeap;
+
+    public PriorityQueue() {
+        this.maxHeap = new MaxHeap<>();
+    }
+
+
+    @Override
+    public void enqueue(T element) {
+        maxHeap.add(element);
+    }
+
+    @Override
+    public T dequeue() {
+        return maxHeap.removeMax();
+    }
+
+    @Override
+    public T getFront() {
+        return maxHeap.getMax();
+    }
+
+    @Override
+    public boolean isEmpty() {
+        return maxHeap.isEmpty();
+    }
+
+    @Override
+    public int size() {
+        return maxHeap.size();
+    }
+
+    @Override
+    public void clear() {
+        maxHeap.clear();
+    }
+}
 
 ```
 
