--- a/DataStructure/算法/回溯算法.md
+++ b/DataStructure/算法/回溯算法.md
@@ -119,18 +119,73 @@ try(int i){
 　　将算法也设置称成两步。
 
 1. 第一步，要判断每次输入的皇后是否在同一行同一列，或者同一斜线上。
+2. 第二步，进入核心算法。
+
+```java
+/**
+ * 八皇后问题
+ */
+public class EightQueens {
+
+    private int t = 0;
+    private int n = 4;
+    private int[] queen = new int[n];
+
+    /**
+     * 判断设置的皇后是否在同一行，同一列，或者同一斜线上
+     *
+     * @param row
+     * @return
+     */
+    public boolean isOk(int row) {
+        for (int j = 0; j < row; j++) {
+            if (queen[row] == queen[j]
+                    || row - queen[row] == j - queen[row]
+                    || row + queen[row] == j + queen[j]) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    /**
+     * 算法函数
+     *
+     * @param row
+     */
+    private void backTracking(int row) {
+        if (row == n) {
+            t++; // 判断若遍历完成，就进行计数
+            System.out.println("t:" + t + ",queen:" + Arrays.toString(queen));
+            return;
+        }
+        for (int col = 0; col < n; col++) { //遍历棋盘每一列
+            queen[row] = col; // 将皇后的位置记录在数组
+            if (isOk(row)) { // 判断皇后的位置是否有冲突
+                backTracking(row + 1); // 递归，计算下一个皇后的位置
+            }
+        }
+    }
+
+    public static void main(String[] args) {
+        EightQueens queens = new EightQueens();
+        queens.backTracking(0);
+    }
+}
 
 ```
 
+　　输出结果：
+
+```java
+t:1,queen:[0, 1, 2, 3]
+t:2,queen:[0, 2, 3, 1]
+t:3,queen:[0, 3, 1, 2]
+t:4,queen:[1, 2, 0, 3]
+t:5,queen:[1, 3, 0, 2]
+t:6,queen:[2, 0, 1, 3]
+t:7,queen:[2, 0, 3, 1]
 ```
-
-2. 第二步，进入核心算法
-
-```
-
-```
-
-
 
 ## 实例二：01 背包问题
 
