--- a/DataStructure/算法/排序算法/基数排序.md
+++ b/DataStructure/算法/排序算法/基数排序.md
@@ -1,6 +1,45 @@
 #  基数排序
 
-　　基数排序
+　　基数排序的发明可以追溯到 1887 年赫尔曼·何乐礼在打卡片制表机（Tabulation Machine），排序器每次只能看到一个列。它是基于元素值得每个位上的字符来排序的。对于数字而言就是分别基于个位、十位、百位或千位等等数字来排序。
+
+　　基数排序（Radix sort）是一种非比较型整数排序算法，其原理是将整数按位数切割成不同的数字，然后按每个位数分别比较。由于整数也可以表达字符串（比如名字或日期）和特定格式的浮点数，所以基数排序也不是只能使用于整数。
+
+## 基本思想
+
+　　它是这样实现的：将所有待比较数值（正整数）同意为同样的数位长度，数位较短的数前面补零。然后，从最低位开始，一次进行一次排序。这样从最低位排序一直到最高位排序完成以后，数列就变成一个有序序列。
+
+　　基数排序按照优先从高位或低位来排序有两种实现方案：
+
+* MSD（Most significant digital）从最左侧高位开始排序。先按 k1 排序分组，同一组中记录，关键码 k1 相等，再对各组按 k2 排序分成子组，之后，对后面的关键码继续这样的排序分组，直到按最次位关键码 kd 对各子组排序后，再将各组连接起来，便得到一个有序序列。
+* LSD（Least significant digital）从最右侧低位开始进行排序。先从 kd 开始排序，再对 kd-1 进行排序，依次重复，直到对 k1 排序后便得到一个有序序列。LSD 方式适用于位数少的序列。
+
+![](image/基数排序.gif)
+
+## 算法描述
+
+　　以 LSD 为例，从最低位开始，具体算法描述如下：
+
+1. 取得数组中的最大数，并取的位数；
+2. arr 为原始数组，从最低位开始取每个位组成 radix 数组；
+3. 对 radix 进行计数排序（利用计数排序使用于小范围数的特点）；
+
+## 代码实现
+
+　　基数排序：通过序列中各个元素的值，对排序的 N 个元素进行若干趟的 “ 分配 ” 与 “ 收集 ” 来实现排序。
+
+* 分配：将 L[i] 中的元素取出，首先
+
+
+
+## 复杂度分析
+
+
+
+## 总结和思考
+
+
+
+
 
 ## 参考文章
 
