--- a/DataStructure/算法/查找算法/平衡查找树之红黑树.md
+++ b/DataStructure/算法/查找算法/平衡查找树之红黑树.md
@@ -30,7 +30,7 @@
 
 ## 3. 红黑树的代码
 
-[]()
+[红黑树](https://github.com/ZhangMiao147/android_learning_notes/blob/master/DataStructure/数据结构/树/红黑树.md)
 
 ## 4. 参考文章
 
